Bug fixes and PartitionedTable constituent optimization work (#2455)